<resources>
    <string name="app_name" translatable="false">Brian Davis - Mobile ACW</string>
    <string name="welcomeView" translatable="false">Welcome to Jumble!</string>
    <string name="playButton" translatable="false"> Play </string>
    <string name="highScoreButton" translatable="false"> High Scores </string>
    <string name="aboutButton" translatable="false"> About </string>
    <string name="aboutText" translatable="false"> About</string>
    <string name="viewAvailableGames" translatable="false"> Available Games</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause">Pause</string>
    <string name="highScore">HighScore</string>
    <string name="timer_default">timer_default</string>
    <string name="hint">hint</string>
    <string name="new_game">new_game</string>
    <string name="retry">retry</string>
    <string name="puzzle_solved">puzzle_solved</string>
    <string name="how_to_flip">Single Tap to flip image tile 180 degrees</string>
    <string name="how_to_rotate">Long Press to flip image tile to the other image</string>
    <string name="select_game">Select Game</string>
</resources>
