<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/welcomeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openPlay"
            android:text="@string/playButton" />

        <Button
            android:id="@+id/viewAvailableGamesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openList"
            android:text="@string/viewAvailableGames" />

        <Button
            android:id="@+id/highScoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openScores"
            android:text="@string/highScoreButton" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openAbout"
            android:text="@string/aboutButton" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>